--- a/main.css
+++ b/main.css
@@ -320,3 +320,31 @@ Menu
   padding-top: 0.5rem;
   color: var(--grey-500);
 }
+
+@media screen and (min-width: 768px) {
+  .menu-item {
+    grid-template-columns: 225px 1fr;
+    gap: 0 1.25rem;
+    max-width: 40rem;
+    align-items: center;
+  }
+
+  .photo {
+    height: 175px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-center {
+    width: 95vw;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .photo {
+    height: 150px;
+  }
+
+  .menu-item {
+    align-items: flex-start;
+  }
+}
